@@ -52,7 +52,6 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
     it.options.release = 21
-    it.options.compilerArgs << "--enable-preview"
 }
 
 java {
